objects/Product_Categorie__c.object
<CustomObject>
    <label>Product Categorie</label>
    <nameField>
        <label>Product Categorie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Categorie__c</fullName>
        <label>Categorie</label>
        <referenceTo>Categories__c</referenceTo>
        <relationshipLabel>Product Categories</relationshipLabel>
        <relationshipName>Product_Categories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Categories</relationshipLabel>
        <relationshipName>Product_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>